# Algorithms_Data_Structures

./: .gitignore  README.md
algo_toolbox/: pyproject.toml
algo_toolbox/week1/: max_pairwise.py
learn_fsharp/basics/: Composition.fs  DownloadPage.fs  Program.fs  Sorting.fs  Syntax.fs  TypesExamples.fs
learn_haskell/hello_world/: hello_world.hs
learn_haskell/lambda_calculus/: list_comprehension.hs
learn_haskell/recursion/: card_validation.hs  higher_order.hs  recursion.hs
learn_sml/: README.md
learn_sml/basics/: calendar.sml  syntax.sml  test.sml  test_calendar.sml
