[tool.poetry]
name = "algo_toolbox"
version = "0.1.0"
description = "Algorithms and data structures"
authors = ["Bizovi <bizovim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
